Completed implementation of first POST method. Still needs polishing up, but it is functional. Connexion has no debugging options for VSCode, so it was all guesswork on what was going wrong. Eventually managed to succeed. This critical error: https://github.com/zalando/connexion/commit/518d1dd3d711782aa56eb406b7fb346443d94271 still exists inside of the Connexion library and needed to be manually fixed.
